fix: Fixes overflow issue in panels

--- a/src/Toolbar/Toolbar.css
+++ b/src/Toolbar/Toolbar.css
@@ -1,7 +1,6 @@
 .d-toolbar {
   position: absolute;
   width: 48px;
-  height: 100%;
   top: 50px;
   bottom: 0;
   z-index: 9999;
