--- a/src/UnitProperties/UnitProperties.css
+++ b/src/UnitProperties/UnitProperties.css
@@ -10,6 +10,8 @@
   overflow: hidden;
   border-left: 1px solid #e6e6e6;
   border-bottom: 1px solid #e6e6e6;
+  max-height: 100%;
+  overflow: hidden;
 }
 
 .d-unit-danger {
@@ -78,4 +80,11 @@
   padding: 3px;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+
+.d-subgroup-charts {
+  margin-top: 12px;
+  width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
